--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -2,5 +2,6 @@
    width: 700px;
    margin-left: auto;
    margin-right: auto;
+   padding-bottom: 30px;
    background-color: rgba(85, 217, 217, 0.41);
 }
