--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import-normalize;
 /* bring in normalize.css styles */
 
+
+
 body {
 
   margin: 0;
@@ -25,5 +27,5 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
-
+  /* background-color: #00bcd5 */
 }
